# OpenMATERIAL-Validation

./: README.md
.github/workflows/: pathtracer_build.ym
cameras/: README.md  cameraProps.json
hdr/: README.md
lights/: README.md  pointLight.gltf
materials/: AC11DS.gltf  Concrete_Broomfinish.gltf  Concrete_Plate.gltf  README.md  SMA11S.gltf  SMA8S.gltf  aluminium.gltf  gold.gltf  iron.gltf
materials/data/: AC11DS_permittivity.gltf  Concrete_Broomfinish_permittivity.gltf  Concrete_Plate_permittivity.gltf  SMA11S_permittivity.gltf  SMA8S_permittivity.gltf  aluminium_emissivity.gltf  aluminium_ior.gltf  gold_emissivity.gltf  gold_ior.gltf  iron_emissivity.gltf  iron_ior.gltf
objects/: README.md  cone_gold.gltf  cube_aluminium.gltf  cube_gold.gltf  cube_pbr_gold.gltf  cubes_pbr.gltf  icospheres_gold_iron_aluminium.gltf  icospheres_gold_iron_missing.gltf  monkey_gold.gltf  plane_pointlight.gltf  sphere_aluminium.gltf  sphere_gold.gltf  teapot_aluminium.gltf  teapot_gold.gltf  teapot_iron.gltf  torus_aluminium.gltf  torus_gold.gltf  torus_pbr.gltf  truck_example.gltf  vehicle_example.gltf
pathtracer/: .gitignore  CMakeLists.txt  README.md  doxygen.conf
pathtracer/scripts/: allRotation.sh  check.sh
pathtracer/src/: main.cpp
pathtracer/src/assets/: AssetBase.h  AssetDefs.cpp  AssetGeometry.cpp  AssetGeometry.h  AssetInfo.h  ImageData.cpp  ImageData.h  Mesh.cpp  Mesh.h  Node.h
pathtracer/src/assets/materials/: AssetMaterial.cpp  AssetMaterial.h  AssetMaterialIor.cpp  AssetMaterialIor.h  Material.h  PbrMaterial.cpp  PbrMaterial.h
pathtracer/src/backgrounds/: Background.h  HdrBackground.cpp  HdrBackground.h
pathtracer/src/brdf/: BRDFModel.h
pathtracer/src/lights/: PointLight.cpp  PointLight.h  RenderLight.cpp  RenderLight.h  RenderLightPoint.cpp  RenderLightPoint.h
pathtracer/src/materials/: BitmapTexture.cpp  BitmapTexture.h  DiffuseColorMaterial.cpp  DiffuseColorMaterial.h  OpenMaterial.cpp  OpenMaterial.h  PhysicallyBasedMaterial.cpp  PhysicallyBasedMaterial.h  RenderMaterial.cpp  RenderMaterial.h
pathtracer/src/renderer/: BDPTRenderer.cpp  BDPTRenderer.h  RendererParameters.h
pathtracer/src/scene/: RenderMesh.cpp  RenderMesh.h  RenderScene.cpp  RenderScene.h  SurfacePoint.cpp  SurfacePoint.h
pathtracer/src/sensors/: PinholeCamera.cpp  PinholeCamera.h  RenderRay.cpp  RenderRay.h  RenderSensor.cpp  RenderSensor.h
pathtracer/src/tonemapping/: ToneMapping.cpp  ToneMapping.h
pathtracer/src/utilities/: BoundingBox.h  Constants.h  Defines.h  Denoiser.h  DistanceRandom.h  Exceptions.h  ImageSaver.cpp  ImageSaver.h  Interpolation.h  Random.cpp  Random.h  RandomSampler.h  ReferenceLink.cpp  ReferenceLink.h  UtilityFunctions.h  Utils.cpp  Utils.h  Uuid.h
pathtracer/src/validation/: FCHandler.cpp  FCHandler.h  FCSubject.cpp  FCSubject.h
scenes/: README.md  multiple_instances.gltf  multiple_objects.gltf  vehicle_pointlights.gltf
